--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
       <section class="grid">
         <a class="card" href="source/pages/admin-and-web.html">
           <h3>Admin &amp; Web</h3>
-          <p>Admin panel &amp; storefront (web). Laravel 12 + Vue 3 (Inertia), Tailwind 4, Vite 7. Setup, environment,
-            queues, testing, deployment.</p>
+          <p>Admin panel &amp; storefront (web). <span class="mark">Laravel 12</span> + <span class="mark">Vue 3</span>
+            (<span class="mark">Inertia</span>), <span class="mark">Tailwind 4</span>, <span class="mark">Vite 7</span>.
+            Setup, environment, queues, testing, deployment.</p>
           <div class="actions">
             <span class="pill">PHP 8+</span>
             <span class="pill">Composer</span>
@@ -54,8 +55,8 @@
         </a>
         <a class="card" href="source/pages/customer-app.html">
           <h3>Customer App</h3>
-          <p>Complete customer app: navigation, auth, search, cart, checkout, maps, notifications, chat. Run, build,
-            configuration.</p>
+          <p>Complete customer app: <span class="mark">navigation</span>, <span class="mark">auth</span>, search, cart,
+            checkout, maps, notifications, chat. Run, build, configuration.</p>
           <div class="actions">
             <span class="pill">Flutter 3+</span>
             <span class="pill">Dart</span>
@@ -68,8 +69,8 @@
         </a>
         <a class="card" href="source/pages/deliveryman-app.html">
           <h3>Deliveryman App</h3>
-          <p>Complete delivery partner app: orders, map navigation, status updates, earnings, chat, notifications. Run,
-            build, configuration.</p>
+          <p>Complete delivery partner app: <span class="mark">orders</span>, map navigation, status updates, earnings,
+            chat, notifications. Run, build, configuration.</p>
           <div class="actions">
             <span class="pill">Flutter 3+</span>
             <span class="pill">Dart</span>
@@ -82,6 +83,8 @@
         </a>
         <div class="card" id="help-support">
           <h3>Help &amp; Support</h3>
+          <div class="alert alert-info">Support covers product usage and bugs. Customizations and server management are
+            out of scope.</div>
           <div class="row">
             <div>
               <div class="list">
@@ -105,10 +108,12 @@
                 <div><a href="https://laravel.com/docs" target="_blank" rel="noopener">Laravel Docs</a></div>
                 <div><a href="https://laravel.com/api" target="_blank" rel="noopener">Laravel API</a></div>
                 <div>Common checks:</div>
-                <div>Flutter: flutter clean; flutter pub get; restart IDE</div>
+                <div>Flutter: <span class="cmd">flutter clean</span>; <span class="cmd">flutter pub get</span>; restart
+                  IDE</div>
                 <div>Android: update SDK/Gradle; invalidate caches</div>
-                <div>iOS: pod repo update; pod install; clean build folder</div>
-                <div>Backend: .env configured; cache cleared; queue running</div>
+                <div>iOS: <span class="cmd">pod repo update</span>; <span class="cmd">pod install</span>; clean build
+                  folder</div>
+                <div>Backend: <span class="mark">.env</span> configured; caches cleared; queue running</div>
               </div>
             </div>
           </div>
