docs: replace div lists with semantic ul/li elements
This change improves HTML semantics and accessibility by using proper unordered list markup for list content instead of generic divs. The styling is preserved via the existing `list` class.

--- a/index.html
+++ b/index.html
@@ -87,34 +87,37 @@
             out of scope.</div>
           <div class="row">
             <div>
-              <div class="list">
-                <div>Email: <a href="mailto:thedayonesoft@gmail.com">thedayonesoft@gmail.com</a></div>
-                <div>WhatsApp: <a href="https://wa.me/8801601666058" target="_blank" rel="noopener">+880 1601-666058</a>
-                </div>
-                <div>Share issue details: steps to reproduce, screenshots/video</div>
-                <div>Include environment info: OS, device/emulator, Flutter/Dart versions</div>
-                <div>Attach logs if possible:
-                  Android Logcat, Xcode logs, Laravel storage/logs/laravel.log</div>
-                <div>Check troubleshooting first:
+              <ul class="list">
+                <li>Email: <a href="mailto:thedayonesoft@gmail.com">thedayonesoft@gmail.com</a></li>
+                <li>WhatsApp: <a href="https://wa.me/8801601666058" target="_blank" rel="noopener">+880
+                    1601-666058</a>
+                </li>
+                <li>Share issue details: steps to reproduce, screenshots/video</li>
+                <li>Include environment info: OS, device/emulator, Flutter/Dart versions</li>
+                <li>Attach logs if possible:
+                  Android Logcat, Xcode logs, Laravel storage/logs/laravel.log</li>
+                <li>Check troubleshooting first:
                   <a href="source/pages/admin-and-web.html#troubleshooting">Admin &amp; Web</a>,
                   <a href="source/pages/customer-app.html#troubleshooting">Customer</a>,
                   <a href="source/pages/deliveryman-app.html#troubleshooting">Deliveryman</a>
-                </div>
-              </div>
+                </li>
+              </ul>
             </div>
             <div>
-              <div class="list">
-                <div><a href="https://docs.flutter.dev" target="_blank" rel="noopener">Flutter Docs</a></div>
-                <div><a href="https://laravel.com/docs" target="_blank" rel="noopener">Laravel Docs</a></div>
-                <div><a href="https://laravel.com/api" target="_blank" rel="noopener">Laravel API</a></div>
-                <div>Common checks:</div>
-                <div>Flutter: <span class="cmd">flutter clean</span>; <span class="cmd">flutter pub get</span>; restart
-                  IDE</div>
-                <div>Android: update SDK/Gradle; invalidate caches</div>
-                <div>iOS: <span class="cmd">pod repo update</span>; <span class="cmd">pod install</span>; clean build
-                  folder</div>
-                <div>Backend: <span class="mark">.env</span> configured; caches cleared; queue running</div>
-              </div>
+              <ul class="list">
+                <li><a href="https://docs.flutter.dev" target="_blank" rel="noopener">Flutter Docs</a></li>
+                <li><a href="https://laravel.com/docs" target="_blank" rel="noopener">Laravel Docs</a></li>
+                <li><a href="https://laravel.com/api" target="_blank" rel="noopener">Laravel API</a></li>
+                <li>Common checks:</li>
+                <li>Flutter: <span class="cmd">flutter clean</span>; <span class="cmd">flutter pub get</span>;
+                  restart
+                  IDE</li>
+                <li>Android: update SDK/Gradle; invalidate caches</li>
+                <li>iOS: <span class="cmd">pod repo update</span>; <span class="cmd">pod install</span>; clean
+                  build
+                  folder</li>
+                <li>Backend: <span class="mark">.env</span> configured; caches cleared; queue running</li>
+              </ul>
             </div>
           </div>
         </div>
