docs: correct stack name from DayOneFood to foodlay
Update the documentation to reflect the correct stack name used in the project.

--- a/source/pages/admin-and-web.html
+++ b/source/pages/admin-and-web.html
@@ -53,7 +53,7 @@
             <h2 id="introduction">Introduction</h2>
             <div class="section">
                 <p><strong>Foodlay</strong> is a modern single-vendor restaurant management system built on top of the
-                    DayOneFood stack, combining a robust <strong>Laravel 12</strong> backend with a dynamic <strong>Vue
+                    foodlay stack, combining a robust <strong>Laravel 12</strong> backend with a dynamic <strong>Vue
                         3</strong> frontend via <strong>Inertia.js</strong>.</p>
                 <ul class="list">
                     <li>Backend: Laravel 12</li>
