docs: update app documentation requirements
- Specify exact Flutter version (Channel stable, 3.41.2) instead of "Flutter 3+"
- Separate Android Studio and Xcode requirements, noting Xcode 26.2 for IPA builds
- Remove backend requirements section as they're no longer needed for app setup
- Apply changes consistently across both customer and deliveryman app pages

--- a/source/pages/customer-app.html
+++ b/source/pages/customer-app.html
@@ -83,17 +83,11 @@
       <h2 id="requirements">Requirements</h2>
       <div class="section">
         <ul class="list">
-          <li>Flutter 3+</li>
+          <li>Flutter (Channel stable, 3.41.2)</li>
           <li>Dart 3+</li>
-          <li>Android Studio or Xcode</li>
+          <li>Android Studio</li>
+          <li>Xcode 26.2 for IPA file build</li>
           <li>Devices or emulators</li>
-        </ul>
-        <h3>Backend Requirements</h3>
-        <ul class="list">
-          <li>PHP ≥ 8.2</li>
-          <li>Composer ≥ 2.5</li>
-          <li>Node.js ≥ 18.x</li>
-          <li>MySQL 8.0+ or MariaDB 10.5+</li>
         </ul>
       </div>
 
