--- a/source/pages/deliveryman-app.html
+++ b/source/pages/deliveryman-app.html
@@ -41,7 +41,6 @@
         <a href="#environment-setup">Environment Setup</a>
         <a href="#setup">Setup</a>
         <a href="#quick-start">Quick Start</a>
-        <a href="#configuration">Configuration</a>
         <a href="#android-ios-config">Android &amp; iOS Config</a>
         <a href="#localization-rtl">Localization &amp; RTL</a>
         <a href="#theme-branding">Theme &amp; Branding</a>
@@ -126,7 +125,8 @@ sudo mv android-studio /YOUR_DIRECTORY
 cd /YOUR_DIRECTORY/android-studio/bin
 ./studio.sh</pre>
         <ul class="list">
-          <li>Install Flutter SDK (Linux): download stable, extract, move to a preferred location, add flutter/bin to PATH.</li>
+          <li>Install Flutter SDK (Linux): download stable, extract, move to a preferred location, add flutter/bin to
+            PATH.</li>
         </ul>
         <pre class="code">tar xf flutter_linux_&lt;version&gt;.tar.xz
 sudo mv flutter /YOUR_DIRECTORY
@@ -140,7 +140,8 @@ flutter doctor</pre>
           <li>Ensure JDK 17 is used for Android builds.</li>
           <li>Open the DMG and drag Android Studio to Applications.</li>
           <li>Launch Android Studio; complete setup and install SDK components.</li>
-          <li>Install Flutter SDK (macOS): download stable, extract, move to preferred location, add flutter/bin to PATH.</li>
+          <li>Install Flutter SDK (macOS): download stable, extract, move to preferred location, add flutter/bin to
+            PATH.</li>
         </ul>
         <pre class="code">tar xf flutter_macos_&lt;version&gt;.tar.xz
 flutter doctor</pre>
@@ -151,12 +152,135 @@ flutter doctor</pre>
 
       <h2 id="setup">Setup</h2>
       <div class="section">
-        <h3>Get dependencies</h3>
+        <h3>Run an existing Flutter project on IDE</h3>
+        <ul class="list">
+          <li>Verify Flutter and IDE setup in a terminal:</li>
+        </ul>
+        <pre class="code">flutter doctor</pre>
+        <ul class="list">
+          <li>Open the project in Android Studio or VS Code.</li>
+          <li>If dependencies are not prompted, fetch them manually:</li>
+        </ul>
         <pre class="code">flutter pub get</pre>
-        <h3>Generate code</h3>
-        <pre class="code highlight">flutter pub run build_runner build --delete-conflicting-outputs</pre>
-        <img src="../assets/images/upload/open-project.png" alt="Open project" class="doc-img">
-        <img src="../assets/images/upload/pub-get-command.png" alt="Pub get command" class="doc-img">
+        <ul class="list">
+          <li>Run the app from IDE or terminal:</li>
+        </ul>
+        <pre class="code">flutter run</pre>
+        <h3>Change App Logo &amp; Icon</h3>
+        <h4>App Logo</h4>
+        <ul class="list">
+          <li>Go to &lt;project&gt;/assets/images/ and replace logo.png with your logo.</li>
+          <li>Use the exact file name logo.png.</li>
+        </ul>
+        <h4>App Icon</h4>
+        <ul class="list">
+          <li>Generate icons using your preferred app icon generator.</li>
+          <li>Android: replace android/app/src/main/res/mipmap-* with the generated icons.</li>
+          <li>iOS: replace ios/Runner/Assets.xcassets with the generated Assets.xcassets.</li>
+        </ul>
+        <h3>Change App Name</h3>
+        <ul class="list">
+          <li>Update the application name in your constants file:</li>
+        </ul>
+        <pre class="code">lib/config/util/app_constants.dart
+static const String appName = 'YOUR_APP_NAME';</pre>
+        <ul class="list">
+          <li>Android: set the label in AndroidManifest.xml:</li>
+        </ul>
+        <pre class="code">android/app/src/main/AndroidManifest.xml
+android:label="YOUR_APP_NAME"</pre>
+        <ul class="list">
+          <li>iOS: set display name and bundle name in Info.plist:</li>
+        </ul>
+        <pre class="code">ios/Runner/Info.plist
+&lt;key&gt;CFBundleDisplayName&lt;/key&gt;
+&lt;string&gt;YOUR_APP_NAME&lt;/string&gt;
+&lt;key&gt;CFBundleName&lt;/key&gt;
+&lt;string&gt;YOUR_APP_NAME&lt;/string&gt;</pre>
+        <h3>Change Base URL</h3>
+        <ul class="list">
+          <li>Install and set up your Admin Panel first.</li>
+          <li>If admin login is https://your_domain.com/admin/auth/login then base URL is https://your_domain.com</li>
+          <li>Open &lt;project&gt;/lib/util/app_constrants.dart and set baseUrl.</li>
+          <li>Do not add a trailing slash.</li>
+        </ul>
+        <pre class="code">Wrong:
+static const String baseUrl = 'https://your_domain.com/';
+
+Right:
+static const String baseUrl = 'https://your_domain.com';</pre>
+        <h3>Change App Package</h3>
+        <ul class="list">
+          <li>Find current package in android/app/src/main/AndroidManifest.xml.</li>
+          <li>In Android Studio: right‑click project → Replace in Path.</li>
+          <li>Enter old package as search, new package as replacement → Replace All.</li>
+        </ul>
+        <h3>Setup Firebase for Push Notification</h3>
+        <div class="alert alert-warning">Use one Firebase project for all apps (Customer, Admin/Web, Deliveryman). Add
+          multiple apps under the same project.</div>
+        <h4>Android</h4>
+        <ul class="list">
+          <li>Add Android app in Firebase with your package name and app name.</li>
+          <li>Download google-services.json and place into android/app/ (replace existing file).</li>
+          <li>Replace notification icon with a white PNG at android/app/src/main/res/drawable/notification_icon.png.
+          </li>
+          <li>Update Firebase options in lib/main.dart (apiKey, appId, messagingSenderId, projectId).</li>
+        </ul>
+        <ul class="list">
+          <li>Generate lib/firebase_options.dart via FlutterFire CLI:</li>
+        </ul>
+        <pre class="code">dart pub global activate flutterfire_cli
+firebase login
+flutterfire configure</pre>
+        <h4>iOS</h4>
+        <ul class="list">
+          <li>Add iOS app in the same Firebase project.</li>
+          <li>Download GoogleService-Info.plist and place under ios/.</li>
+          <li>Complete APNs/FCM integration steps for iOS.</li>
+        </ul>
+        <ul class="list">
+          <li>See: <a href="https://firebase.flutter.dev/docs/messaging/apple-integration" target="_blank">FCM via APNs
+              integration</a></li>
+        </ul>
+        <h4>Admin</h4>
+        <ul class="list">
+          <li>Add a Web app in the project to retrieve firebaseConfig for Admin.</li>
+          <li>Follow Admin Firebase configuration.</li>
+        </ul>
+        <ul class="list">
+          <li>Guide: <a
+              href="https://6ammart.app/documentation/admin-application-configuration/mandatory-setups/#firebase-configuration"
+              target="_blank">Admin Firebase configuration</a></li>
+        </ul>
+        <div class="alert alert-info">After setup, restart your IDE, uninstall any previously installed app, and run
+          again on a real device (emulators/simulators do not receive push on iOS).</div>
+        <h3>Android Secrets</h3>
+        <ul class="list">
+          <li>Create android/app/src/main/res/values/secrets.xml with required keys.</li>
+          <li>Keys: google_maps_api_key, facebook_app_id, facebook_client_token</li>
+        </ul>
+        <pre class="code">&lt;resources&gt;
+  &lt;string name="google_maps_api_key"&gt;YOUR_KEY&lt;/string&gt;
+  &lt;string name="facebook_app_id"&gt;YOUR_APP_ID&lt;/string&gt;
+  &lt;string name="facebook_client_token"&gt;YOUR_TOKEN&lt;/string&gt;
+&lt;/resources&gt;</pre>
+        <h3>Add Google Map API Key</h3>
+        <ul class="list">
+          <li>Generate your Google Maps API key.</li>
+          <li>Enable: Directions API, Distance Matrix API, Geocoding API, Maps SDK for Android, Maps SDK for iOS, Maps
+            JavaScript API, Places API, Geolocation API, Routes API, Places API (New).</li>
+          <li>Enable billing on your Google Cloud project.</li>
+        </ul>
+        <div class="alert alert-warning">If your map key was created before March 1, 2025, enable Routes API and Places
+          API (New).</div>
+        <h4>Android</h4>
+        <pre
+          class="code">&lt;meta-data android:name="com.google.android.geo.API_KEY" android:value="YOUR_MAP_API_KEY_HERE"/&gt;</pre>
+        <h4>iOS</h4>
+        <pre class="code">GMSServices.provideAPIKey("YOUR_MAP_API_KEY_HERE")</pre>
+        <h4>Web</h4>
+        <pre
+          class="code">&lt;script src="https://maps.googleapis.com/maps/api/js?key=YOUR_MAP_API_KEY_HERE"&gt;&lt;/script&gt;</pre>
       </div>
 
       <h2 id="quick-start">Quick Start</h2>
@@ -172,69 +296,7 @@ flutter doctor</pre>
         <img src="../assets/images/upload/run-completed.png" alt="Run completed" class="doc-img">
       </div>
 
-      <h2 id="configuration">Configuration</h2>
-      <div class="section">
-        <h3>Firebase</h3>
-        <div class="alert alert-warning">These configuration files contain sensitive credentials. Do not commit them to
-          source control.</div>
-        <ul class="list">
-          <li>Android: android/app/google-services.json</li>
-          <li>iOS: ios/Runner/GoogleService-Info.plist</li>
-          <li>Generate lib/firebase_options.dart via FlutterFire CLI</li>
-        </ul>
-        <pre class="code">dart pub global activate flutterfire_cli
-firebase login
-flutterfire configure</pre>
-        <h3>Android Secrets</h3>
-        <ul class="list">
-          <li>Create android/app/src/main/res/values/secrets.xml</li>
-          <li>Keys: google_maps_api_key, facebook_app_id, facebook_client_token</li>
-        </ul>
-        <pre class="code">&lt;resources&gt;
-  &lt;string name="google_maps_api_key"&gt;YOUR_KEY&lt;/string&gt;
-  &lt;string name="facebook_app_id"&gt;YOUR_APP_ID&lt;/string&gt;
-  &lt;string name="facebook_client_token"&gt;YOUR_TOKEN&lt;/string&gt;
-&lt;/resources&gt;</pre>
-        <h3>Server API Base URL</h3>
-        <ul class="list">
-          <li>Set the server API base URL used to fetch data (root of your Laravel backend)</li>
-          <li>Edit lib/config/util/app_constants.dart and set baseUrl to your backend domain</li>
-          <li>No trailing slash; endpoints are appended (e.g., /api/v1/...)</li>
-          <li>Local development hosts:</li>
-          <li>Android emulator → http://10.0.2.2:8000 (or your backend port)</li>
-          <li>iOS simulator → http://localhost:8000 (or http://localhost:8888 for MAMP)</li>
-          <li>Ensure your backend allows CORS for the app’s origin during development</li>
-        </ul>
-        <pre class="code">lib/config/util/app_constants.dart
-static const String baseUrl = 'https://example.com';</pre>
-        <ul class="list">
-          <li>HTTP client composes requests as baseUrl + endpoint path</li>
-          <li>See lib/core/data/api/api_client.dart (Uri.parse(appBaseUrl + uri))</li>
-          <li>Optional per-environment base URL:</li>
-          <li>Edit lib/core/dependency_injection/dependency_module.dart and switch env in lib/main.dart</li>
-        </ul>
-        <pre class="code">lib/core/dependency_injection/dependency_module.dart
-@Named('appBaseUrl') @dev  String get devBaseUrl  =&gt; 'https://dev.example.com';
-@Named('appBaseUrl') @prod String get prodBaseUrl =&gt; 'https://api.example.com';
-
-lib/main.dart
-await configureDependencies(env: Environment.prod);</pre>
-        <h3>Maps API Key</h3>
-        <div class="alert alert-info">Restrict keys to your package/bundle and enable required Maps SDKs.</div>
-        <ul class="list">
-          <li>AndroidManifest.xml:</li>
-        </ul>
-        <pre class="code">&lt;application&gt;
-  &lt;meta-data
-      android:name="com.google.android.geo.API_KEY"
-      android:value="@string/google_maps_api_key"/&gt;
-&lt;/application&gt;</pre>
-        <ul class="list">
-          <li>iOS Info.plist:</li>
-        </ul>
-        <pre class="code">&lt;key&gt;GMSApiKey&lt;/key&gt;
-&lt;string&gt;YOUR_IOS_API_KEY&lt;/string&gt;</pre>
-      </div>
+      <!-- Configuration section merged into Setup; removed to avoid duplication -->
 
       <h2 id="android-ios-config">Android &amp; iOS Config</h2>
       <div class="section">
